<resources>
    <string name="app_name">Split Check</string>
    <string name="title_activity_login">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_create_check">New Check</string>
    <string name="title_activity_participants">Search</string>

    <!--Google Sign In strings-->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in...</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="loading">Loading...</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="please_sign_in">Please sign in to start splitting checks!</string>
    <string name="bypass_google_sign_in">Continue without Google login</string>

    <!--Menu strings-->
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>

    <!--Action strings-->
    <string name="action_new_check">Add New Check</string>
    <string name="action_new_item">Add New Item</string>
    <string name="action_add_participant">Add Participant</string>
    <string name="action_options">Options</string>

    <!--Settings strings-->
    <string name="pref_tax_label">Tax</string>
    <string name="pref_tax_label_percent">Per</string>
    <string name="pref_tax_label_dollars">Dol</string>
    <string name="pref_tax_percent">percent</string>
    <string name="pref_tax_dollars">dollars</string>
    <string name="pref_tax_key">tax</string>


    <!--Strings for SplitCheck Java files-->
    <!--Strings for Check Fragment/Activities-->
    <string name="tab_items">Items</string>
    <string name="tab_group">Group</string>
    <string name="tab_modifiers">Modifiers</string>
    <string name="check_your_total_default">Your Total: $0.00</string>
    <string name="check_your_total">Your Total: %1$s</string>
    <string name="check_create">Create</string>
    <string name="check_delete_confirmation_title">Are you sure?</string>
    <string name="check_delete_name">Delete %1$s</string>
    <string name="check_delete">Delete</string>
    <string name="check_delete_cancel">Cancel</string>
    <string name="check_deleted_name">%1$s Deleted</string>
    <string name="check_information_title">Check Information</string>
    <string name="check_update_information_title">Update Check Information</string>
    <string name="check_update">Update</string>


    <!--Strings for Participant Fragment/Activities-->
    <string name="participant_add">Add</string>
    <string name="participant_add_new">Add New</string>
    <string name="participant_no_one_added">No One Added</string>
    <string name="participant_create">Create</string>
    <string name="participant_input_error">Error with input. No participant added.</string>
    <string name="participant_assign">Assign</string>
    <string name="participant_add_to_group">Add To Group</string>
    <string name="participant_create_new">Create New Participant</string>
    <string name="participant_remove_confirmation_title">Are you sure?</string>
    <string name="participant_remove_name">Remove %1$s</string>
    <string name="participant_remove">Remove</string>
    <string name="participant_remove_cancel">Cancel</string>
    <string name="participant_removed_name">%1$s Removed</string>
    <string name="participant_your_name_title">Your Name</string>
    <string name="participant_delete_confirmation_title">Are you sure?</string>
    <string name="participant_delete_self">Can not delete yourself!</string>
    <string name="participant_delete_name">Deleting %1$s will remove him/her from all checks.</string>
    <string name="participant_delete">Delete</string>
    <string name="participant_delete_cancel">Cancel</string>
    <string name="participant_deleted_name">%1$s Deleted</string>

    <!--Strings for Item Fragment/Activities-->
    <string name="item_create">Create</string>
    <string name="item_input_error">Error with input. No item added.</string>
    <string name="item_update">Update</string>
    <string name="item_edit_error">Error with input. Item not edited.</string>
    <string name="item_assign_title">Who had %1$s?</string>
    <string name="item_edit_title">Edit Item Info</string>
    <string name="item_new_item_title">New Item Info</string>
    <string name="item_split_amount">Split X %1$s</string>
    <string name="item_delete_confirmation_title">Are you sure?</string>
    <string name="item_delete_name">Delete %1$s</string>
    <string name="item_delete">Delete</string>
    <string name="item_delete_cancel">Cancel</string>
    <string name="item_deleted_name">%1$s Deleted</string>

    <!--Strings for Modifier Fragment/Activities-->
    <string name="modifier_percent">Percent</string>
    <string name="modifier_set_percent">Set Percent</string>
    <string name="modifier_set_amount">Set Amount</string>


    <!--Strings For XML Below-->
    <!--Strings for activity_check_detail.xml-->
    <string name="default_edit_check_name">Check name</string>
    <string name="default_edit_check_your_total">Your Total: $0.00</string>
    <string name="default_edit_check_subtotal">Subtotal: $0.00</string>
    <string name="default_edit_check_total">Total: $0.00</string>

    <!--Strings for check_item.xml-->
    <string name="default_check_item_name">Check Name</string>
    <string name="default_check_item_date_time">1/1/2017 12:01 AM</string>
    <string name="default_check_item_total">$0.00</string>
    <string name="edit_check_item">Edit</string>
    <string name="delete_check_item">Delete</string>

    <!--Strings for check_item_item.xml-->
    <string name="default_check_item_item_name">Item Name</string>
    <string name="default_check_item_item_cost">$0.00</string>
    <string name="default_check_item_item_split">Name</string>
    <string name="edit_item_item">Edit</string>
    <string name="delete_item_item">Delete</string>

    <!--String for menu_participants.xml-->
    <string name="search_participants">Search Participants</string>

    <!--String for participant_item.xml-->
    <string name="delete_participant_item">Delete</string>

    <!--String for check_participant_item.xml-->
    <string name="default_check_participant_item_name">-First Last</string>
    <string name="default_check_participant_item_total">Total</string>
    <string name="remove_participant_item">Remove</string>

    <!--Strings for fragment_check_detail_participants.xml-->
    <string name="empty_participants">There is currently no one in your group.
        Use the button below to add people to your group!</string>

    <!--Strings for fragment_check_detail_modifiers.xml-->
    <string name="modifier_tax">Tax</string>
    <string name="modifier_tip">Tip</string>
    <string name="modifier_gratuity">Gratuity</string>
    <string name="modifier_fees">Fees</string>
    <string name="modifier_discount">Discount</string>
    <string name="default_modifier_amount">100</string>

    <string-array name="modifierPercent">
        <item>$</item>
        <item>&#37;</item>
    </string-array>


    <!--Strings for Dialog XML Below-->
    <!--Strings for fragment_create_item_dialog.xml-->
    <string name="dialog_item_name">Name</string>
    <string name="dialog_item_cost">Cost</string>
    <!--Strings for fragment_create_check_dialog.xml-->
    <string name="dialog_check_name">Name</string>
    <!--Strings for fragment_create_participant_dialog.xml-->
    <string name="dialog_participant_first_name">First Name</string>
    <string name="dialog_participant_last_name">Last Name</string>
    <!--Strings for fragment_change_modifier_dialog.xml-->
    <string name="dialog_modifier_amount">Amount</string>

</resources>
