<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="6dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_check_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/linear_layout_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_check_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_check_item_name"
                    android:textSize="30sp"/>

                <ImageView
                    android:id="@+id/options_icon_check_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:layout_gravity="center_vertical|end"/>

            </FrameLayout>

            <TextView
                android:id="@+id/date_time_check_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_check_item_date_time"/>



        </LinearLayout>

        <TextView
            android:id="@+id/total_check_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end|right"
            android:textSize="24sp"
            android:padding="@dimen/text_padding"
            android:text="@string/default_check_item_total"/>

    </android.support.v7.widget.CardView>

</LinearLayout>